--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.8.1",
     "axios": "^0.26.0",
     "next": "12.1.0",
+    "postgres": "2.0.0-beta.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
