--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/babel-plugin": "^11.7.2",
     "@emotion/react": "^11.8.1",
     "axios": "^0.26.0",
+    "dotenv-safe": "^8.2.0",
     "next": "12.1.0",
     "postgres": "2.0.0-beta.10",
     "react": "17.0.2",
