--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@emotion/babel-plugin": "^11.7.2",
     "@emotion/react": "^11.8.1",
+    "@prisma/client": "^3.10.0",
+    "@types/dotenv-safe": "^8.1.2",
     "axios": "^0.26.0",
-    "dotenv-safe": "^8.2.0",
     "next": "12.1.0",
-    "postgres": "2.0.0-beta.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
