--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/babel-plugin": "^11.7.2",
     "@emotion/react": "^11.8.1",
     "@types/dotenv-safe": "^8.1.2",
+    "@types/file-saver": "^2.0.5",
     "axios": "^0.26.0",
     "file-saver": "^2.0.5",
     "next": "12.1.0",
